force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Full_Name__c</fullName>
    <description>This field captures the full name of the opportunity owner. This field is used in Responsive (CQM) field mapping. Jira Story # CMCM-5762</description>
    <formula>Owner.FirstName  +&quot; &quot; +  Owner.LastName</formula>
    <inlineHelpText>Full name of the opportunity owner</inlineHelpText>
    <label>Opportunity Owner Full Name</label>
    <type>Text</type>
</CustomField>