force-app/main/default/objects/Opportunity/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <description>User manually enters the value. Was previously labeled &apos;Pain&apos; in the UI and replaced it with &apos;Critical Business Issue&apos; but we will not update the API</description>
    <inlineHelpText>The critical problem the customer is seeking to solve.</inlineHelpText>
    <label>Critical Business Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pain</valueSetName>
    </valueSet>
</CustomField>