force-app/main/default/objects/Opportunity/fields/Partner_Primary_Field_Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Field_Service_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-16207- To populate channel partner users value based on Distributor Account</description>
    <label>Partner Primary Field Service Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>