force-app/main/default/objects/Opportunity/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <description>As part of DCP-8330 for the capturing the values of Price List.</description>
    <label>Price List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>