force-app/main/default/objects/Opportunity/fields/Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Type__c</fullName>
    <description>As part of DCP-8330 for the capturing the values of Price List Type from Sold To Account Sales Area.</description>
    <label>Price List Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>