force-app/main/default/objects/Opportunity/fields/Primary_Field_Application_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Primary_Field_Application_Scientist__c</fullName>
    <description>Lookup to User who is treated as  Primary Field Application Scientist	</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Field Application Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>