force-app/main/default/objects/Opportunity/fields/Primary_FSE_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_FSE_Full_Name__c</fullName>
    <description>This field captures the full name of the Primary FSE. This field is used in Responsive (CQM) field mapping. Jira Story # CMCM-5762</description>
    <formula>Primary_Field_Service_Engineer__r.FirstName  + &quot; &quot; +  Primary_Field_Service_Engineer__r.LastName</formula>
    <inlineHelpText>Full name of the Primary FSE</inlineHelpText>
    <label>Primary FSE Full Name</label>
    <type>Text</type>
</CustomField>