force-app/main/default/objects/Opportunity/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Value Source : User manually Enters the value. High level product class representative of best solution to meet customer&apos;s needs. Multi-select and is required throughout the opportunity lifecycle.</description>
    <inlineHelpText>High level product class representative of best solution to meet customer&apos;s needs. Multi-select and is required throughout the opportunity lifecycle.</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Interest</valueSetName>
    </valueSet>
</CustomField>