force-app/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>System generated field reflecting high level product class based on items added to APTTUS cart</description>
    <inlineHelpText>System generated field reflecting high level product class based on items added to APTTUS cart. Non-editable.</inlineHelpText>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>