force-app/main/default/objects/Opportunity/fields/Projected_Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Projected_Budget_Range__c</fullName>
    <description>As part of DCP-1298 for the possible values for Projected Budget Range.
Manual</description>
    <inlineHelpText>Customer&apos;s estimated budget range for solving the stated Pain and customer need. Required in order to move to Qualify stage.</inlineHelpText>
    <label>Projected Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Projected_Budget_Range</valueSetName>
    </valueSet>
</CustomField>