force-app/main/default/objects/Opportunity/fields/Purchase_Order_Received_On__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Received_On__c</fullName>
    <description>As part of DCP-1298 captures date when the Purchase Order Received
Through SAP.</description>
    <inlineHelpText>System populated field; syncs from SAP once order is entered.</inlineHelpText>
    <label>Purchase Order Received On</label>
    <type>Date</type>
</CustomField>