force-app/main/default/objects/Opportunity/fields/Purchase_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeline__c</fullName>
    <description>To display Timeline information.</description>
    <inlineHelpText>Customer&apos;s estimated buying cycle timeline for solving the stated Pain and customer need. Required in order to move to Qualify stage.</inlineHelpText>
    <label>Purchase Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Timeline</valueSetName>
    </valueSet>
</CustomField>