force-app/main/default/objects/Opportunity/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Captures Recipient Name</description>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>