force-app/main/default/objects/Opportunity/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>As part of DCP-814, this field captures the value of record type name of current opportunity which can then be used in validation rule</description>
    <label>RecordTypeName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>