force-app/main/default/objects/Opportunity/fields/Relocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Type__c</fullName>
    <description>Auto populated field to help identify Relocation Opportunities/Quote as Trans-Region or Trans-Border based on the Ultimate Consignee &amp; Current Ultimate Consignee.</description>
    <inlineHelpText>This field helps identifying Relocation Opportunities/Quote as Trans-Region or Trans-Border based on the Ultimate Consignee &amp; Future UC</inlineHelpText>
    <label>Relocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Standard Relocation</fullName>
            </value>
            <value>
                <fullName>Trans-Border Relocation</fullName>
            </value>
            <value>
                <fullName>Trans-Region Relocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>