force-app/main/default/objects/Opportunity/fields/Rev_Rec_Terms__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Terms__c</fullName>
    <description>As part of DCP-1298 for the possible values for Rev Rec Terms.
Manual.</description>
    <inlineHelpText>Applicable revenue recognition terms associated with customer purchase resulting from successful closure of opportunity.</inlineHelpText>
    <label>Rev Rec Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rev_Rec_Terms</valueSetName>
    </valueSet>
</CustomField>