force-app/main/default/objects/Opportunity/fields/Sales_Area_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_Distributor__c</fullName>
    <description>Sales Area of Distributor Account</description>
    <label>Sales Area (Distributor)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>