force-app/main/default/objects/Opportunity/fields/Sales_Area_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_Sold_To__c</fullName>
    <description>As part of DCP-8330 for the capturing the values of Sales Area of Sold To Account.</description>
    <label>Sales Area (Sold To)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>