force-app/main/default/objects/Opportunity/fields/Sales_Area_Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_Ultimate_Consignee__c</fullName>
    <description>As part of DCP-8330 for the capturing the values of Sales Area of Ultimate Consignee.</description>
    <label>Sales Area (Ultimate Consignee)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>