force-app/main/default/objects/Opportunity/fields/Sales_Org_Override__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Override__c</fullName>
    <description>Picklist field to override auto populated Sales Org</description>
    <label>Sales Org Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT01</fullName>
            </value>
            <value>
                <fullName>AU01</fullName>
            </value>
            <value>
                <fullName>BE01</fullName>
            </value>
            <value>
                <fullName>BR01</fullName>
            </value>
            <value>
                <fullName>CA01</fullName>
            </value>
            <value>
                <fullName>CN01</fullName>
            </value>
            <value>
                <fullName>CN03</fullName>
            </value>
            <value>
                <fullName>CO01</fullName>
            </value>
            <value>
                <fullName>DE01</fullName>
            </value>
            <value>
                <fullName>DK01</fullName>
            </value>
            <value>
                <fullName>ES01</fullName>
            </value>
            <value>
                <fullName>FI01</fullName>
            </value>
            <value>
                <fullName>FR01</fullName>
            </value>
            <value>
                <fullName>GB01</fullName>
            </value>
            <value>
                <fullName>HK01</fullName>
            </value>
            <value>
                <fullName>IE01</fullName>
            </value>
            <value>
                <fullName>IN01</fullName>
            </value>
            <value>
                <fullName>IT01</fullName>
            </value>
            <value>
                <fullName>JP01</fullName>
            </value>
            <value>
                <fullName>KR01</fullName>
            </value>
            <value>
                <fullName>MX01</fullName>
            </value>
            <value>
                <fullName>NL01</fullName>
            </value>
            <value>
                <fullName>NO01</fullName>
            </value>
            <value>
                <fullName>SE01</fullName>
            </value>
            <value>
                <fullName>SG01</fullName>
            </value>
            <value>
                <fullName>TW01</fullName>
            </value>
            <value>
                <fullName>US01</fullName>
            </value>
            <value>
                <fullName>US04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>