force-app/main/default/objects/Opportunity/fields/Ship_To_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Sales_Org__c</fullName>
    <description>Sales Org of Ship To Account</description>
    <label>Ship To Sales Org</label>
    <type>TextArea</type>
</CustomField>