force-app/main/default/objects/Opportunity/fields/Sold_To_Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account_Region__c</fullName>
    <description>Territory Region of Sold To Account</description>
    <label>Sold To Account Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>