force-app/main/default/objects/Opportunity/fields/Sold_to_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Distribution_Channel__c</fullName>
    <description>Distribution Channel of Sold To Account</description>
    <label>Sold to Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>