force-app/main/default/objects/Opportunity/fields/Sold_to_Division__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Division__c</fullName>
    <description>Division of Sold To Account</description>
    <label>Sold to Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>