force-app/main/default/objects/Opportunity/fields/Sold_to_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Sales_Organization__c</fullName>
    <description>Sales Org of Sold To Account</description>
    <label>Sold to Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>