force-app/main/default/objects/Opportunity/fields/Summarize_Buying_Vision__c.field-meta.xml
<CustomField>
    <fullName>Summarize_Buying_Vision__c</fullName>
    <description>As part of DCP-1298 for capturing customer&apos;s buying vision
Manual.</description>
    <inlineHelpText>Customer&apos;s overall concept of the problem being solved, buying process, future state vision, etc. (Optional)</inlineHelpText>
    <label>Summarize Buying Vision</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>