force-app/main/default/objects/Opportunity/fields/Tender_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Tender_Close_Date__c</fullName>
    <description>* Field to enter the Tender close date.
        * Validation: Tender Close Date can&apos;t be greater than the Opportunity Close Date
        * CMCM-728 (Q3-2023)</description>
    <inlineHelpText>Date Customer will make a decision (Illumina or Competitor)</inlineHelpText>
    <label>Tender Close Date</label>
    <type>Date</type>
</CustomField>