force-app/main/default/objects/Opportunity/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Territory Region of Account</description>
    <formula>Account.Territory_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Region</label>
    <type>Text</type>
</CustomField>