force-app/main/default/objects/Opportunity/fields/Transborder_Flag__c.field-meta.xml
<CustomField>
    <fullName>Transborder_Flag__c</fullName>
    <description>Checkbox for Transborder Flag</description>
    <defaultValue>false</defaultValue>
    <label>Transborder Flag</label>
    <type>Checkbox</type>
</CustomField>