force-app/main/default/objects/Opportunity/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As part of DCP-1298 for capturing the end user for the opportunity
Automated/Manual.</description>
    <inlineHelpText>Name of entity using product/solution;  specific to location where solution/will be installed or relocated. Required through opportunity lifecycle; drives pricebook (direct channel). Changes to UC after Quote Approved invalidates Quote and changes stage to Denied.</inlineHelpText>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ultimate Consignee)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>