force-app/main/default/objects/Opportunity/fields/Ultimate_Consignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_Name__c</fullName>
    <description>This field captures the Ultimate Consignee Account Name. This field is used in Responsive (CQM) field mapping. Jira Story # CMCM-5762</description>
    <formula>Ultimate_Consignee__r.Name</formula>
    <inlineHelpText>Ultimate Consignee Account Name</inlineHelpText>
    <label>Ultimate Consignee Name</label>
    <type>Text</type>
</CustomField>