force-app/main/default/objects/Opportunity/fields/Ultimate_Consignee_Region__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_Region__c</fullName>
    <description>Stores Territory Region of Ultimate Consignee</description>
    <label>Ultimate Consignee Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>