force-app/main/default/objects/Opportunity/recordTypes/Indirect_Field_Services.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Field_Services</fullName>
    <active>true</active>
    <businessProcess>Re-order and Field Services Sales Process</businessProcess>
    <description>Select for all Indirect Billable and Professional Services sales opportunities (Quote-to-Order only)  (Break/fix, PM, Relocation, IQ/OQ, Consulting, Compliance, etc.)</description>
    <label>Indirect Field Services</label>
</RecordType>