force-app/main/default/objects/Opportunity/recordTypes/Indirect_Standard.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Standard</fullName>
    <active>true</active>
    <businessProcess>Standard Direct and Indirect Sales Process</businessProcess>
    <description>Select for all Indirect High-Touch sales opportunities   (Instruments, Software, Consumables, Service Contracts, Bundles, Tenders, Rentals, etc.)</description>
    <label>Indirect Standard</label>
</RecordType>