force-app/main/default/objects/Opportunity/recordTypes/Re_Order.recordType-meta.xml
<RecordType>
    <fullName>Re_Order</fullName>
    <active>true</active>
    <businessProcess>Re-order and Field Services Sales Process</businessProcess>
    <description>Select for all Direct Reorder/Renewal and Custom Product opportunities - No Up/Cross Sell (Quote-to-Order only). (Consumable Reorders, Service Contract Renewals, Software Renewals, Custom Product (First Buy)).</description>
    <label>Direct Reorder and Custom Product</label>
</RecordType>