force-app/main/default/objects/Opportunity/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <businessProcess>Standard Direct and Indirect Sales Process</businessProcess>
    <description>Select for all Direct High-Touch sales opportunities   (Instruments, Software, Consumables, Service Contracts, Bundles, Tenders, Rentals, etc.)</description>
    <label>Direct Standard</label>
</RecordType>