force-app/main/default/objects/Opportunity/recordTypes/Standing_Quote.recordType-meta.xml
<RecordType>
    <fullName>Standing_Quote</fullName>
    <active>true</active>
    <businessProcess>Standing Quote Sales Process</businessProcess>
    <description>Select for all sales opportunities created from standing quote agreements</description>
    <label>Standing Quote</label>
</RecordType>