force-app/main/default/objects/Opportunity/validationRules/Check_Close_Reason_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Close_Reason_Other</fullName>
    <active>true</active>
    <description>Jira Story # CMCM-4498</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Loss_Reason__c , &quot;Other&quot; ),
ISPICKVAL(  Abandon_Reason__c  , &quot;Other&quot; ) 
),
ISBLANK(Close_Reason_Other__c),
NOT (
OR (
$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
$Profile.Name = $Label.ProfileSystemAdmin,
$Profile.Name = $Label.ProfileDataSteward,
$Profile.Name = $Label.ProfileIntegrationSalesSnapLogic
)
)
)</errorConditionFormula>
    <errorDisplayField>Close_Reason_Other__c</errorDisplayField>
    <errorMessage>Please enter &apos;Close Reason - Other&apos;</errorMessage>
</ValidationRule>