force-app/main/default/objects/Opportunity/validationRules/Check_If_Blank_Closure_Details_On_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_Blank_Closure_Details_On_Close</fullName>
    <active>true</active>
    <description>Check If Blank &quot;Closure Details&quot; On Closed Lost OR Closed Abandoned Opportunity.</description>
    <errorConditionFormula>AND(
     NOT(ISCHANGED(StageName)),
     
     OR(
         ISPICKVAL(StageName, &quot;Closed Lost&quot;),
         ISPICKVAL(StageName, &quot;Closed Abandoned&quot;)
     ),
     
     ISBLANK( Abandoned_Reason_Details__c ),
     
     NOT(
          OR(
              $Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
              $Profile.Name = $Label.ProfileSystemAdmin,
              $Profile.Name = $Label.ProfileDataSteward,
              $Profile.Name = $Label.ProfileIntegrationSalesSnapLogic,
              AND(
                   ISCHANGED(Is_Updated_By_System__c),
                   Is_Updated_By_System__c = true
              )
          )
     )
)</errorConditionFormula>
    <errorDisplayField>Abandoned_Reason_Details__c</errorDisplayField>
    <errorMessage>Please complete &apos;Closure Detail&apos; field for Close Lost and Close Abandon Opportunities.</errorMessage>
</ValidationRule>