force-app/main/default/objects/Opportunity/validationRules/CheckAgreementTypeForTenderOpportunites.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgreementTypeForTenderOpportunites</fullName>
    <active>true</active>
    <description>The agreement should be of type &quot;Tender&quot; for Opportunity with Tender Status as &quot;Published Tender&quot; [JIRA Story: CMCM-12519].</description>
    <errorConditionFormula>AND(
	NOT (
		OR (
			$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
			ISCHANGED ( Is_Updated_By_System__c ),
			Is_Updated_By_System__c = true,
			$Profile.Name = $Label.ProfileSystemAdmin
		)
	),
	TEXT(Tender_Status__c)=$Label.Tender_Status_Published_Tender,
        NOT(ISPICKVAL(Ultimate_Consignee__r.BillingCountryCode,&apos;CN&apos;)),

	OR(
		AND(
			NOT(ISBLANK(Related_Agreement__c)),
			Related_Agreement__r.RecordType.DeveloperName != $Label.AgreementRecordTypeNameTender
		), 
		ISBLANK(Related_Agreement__c)

	)
)</errorConditionFormula>
    <errorDisplayField>Related_Agreement__c</errorDisplayField>
    <errorMessage>Opportunity with Tender Status of &quot;Published Tender&quot; must have Related Agreement of type &quot;Tender&quot;.</errorMessage>
</ValidationRule>