force-app/main/default/objects/Opportunity/validationRules/CheckClinicalTypeIsNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckClinicalTypeIsNotBlank</fullName>
    <active>true</active>
    <description>Checks Clinical Type is Not Blank when moving from create for Standard or develop for Reorder/Field Service Record Type</description>
    <errorConditionFormula>AND (
    OR (
        AND ( 
            /*Checking Record Type*/
            OR ( 
                $RecordType.DeveloperName = $Label.OpportunityRTDirectReOrder, 
                $RecordType.DeveloperName = $Label.FieldServices, 
                $RecordType.DeveloperName = $Label.IndirectFieldServices, 
                $RecordType.DeveloperName = $Label.IndirectReOrder 
            ),
            /*Checking Exit Stages*/ 
            NOT (
                OR ( 
                    PRIORVALUE ( StageName )= $Label.OpportunityStageClosedWon, 
                    TEXT ( StageName ) = $Label.OpportunityStageCreate,
                    TEXT ( StageName ) = $Label.OpportunityStageQualify,
                    TEXT ( StageName ) = $Label.OpportunityStageNegotiateResolve,
                    TEXT ( StageName ) = $Label.OpportunityStageProve,
                    TEXT ( StageName ) = $Label.OpportunityStageClosedWon,
                    TEXT ( StageName ) = $Label.OpportunityStageDevelop,
                    TEXT ( StageName ) = $Label.OpportunityStageClosedAbandoned, 
                    TEXT ( StageName ) = $Label.OpportunityStageClosedLost
                )
            )
        ),
        AND (            
        /*Checking Record Type*/
            OR ( 
	        RecordType.DeveloperName = $Label.OpportunityRTDirectStandard,  
	        RecordType.DeveloperName = $Label.OpportunityRTIndirectStandard
	    ), 
             /*Checking Exit Stages*/ 
	    NOT (
	        OR ( 
                    PRIORVALUE ( StageName  ) = $Label.OpportunityStageClosedWon, 
                    TEXT ( StageName ) = $Label.OpportunityStageClosedWon,
                    TEXT ( StageName ) = $Label.OpportunityStageCreate,
                    TEXT ( StageName ) = $Label.OpportunityStageClosedAbandoned, 
                    TEXT ( StageName ) = $Label.OpportunityStageClosedLost
                )
	    )
        )
    ),
    TEXT ( Account.Account_Status__c ) &lt;&gt; $Label.AccountStatusObsolete, 
    TEXT ( Account.Account_Status__c ) &lt;&gt; $Label.AccountStatusPendingObsolete, 
    TEXT ( Ultimate_Consignee__r.Account_Status__c ) &lt;&gt; $Label.AccountStatusObsolete, 
    TEXT ( Ultimate_Consignee__r.Account_Status__c ) &lt;&gt; $Label.AccountStatusPendingObsolete, 
    TEXT ( Distributor__r.Account_Status__c ) &lt;&gt; $Label.AccountStatusObsolete, 
    TEXT ( Distributor__r.Account_Status__c ) &lt;&gt; $Label.AccountStatusPendingObsolete, 
    TEXT ( Lessor_Customer__r.Account_Status__c ) &lt;&gt; $Label.AccountStatusObsolete, 
    TEXT ( Lessor_Customer__r.Account_Status__c ) &lt;&gt; $Label.AccountStatusPendingObsolete,
    ISPICKVAL( Clinical_Type__c , &apos;&apos;),
    NOT (
        OR (     
            ISCHANGED ( Is_Updated_By_System__c ),
            Is_Updated_By_System__c = true,
            $Profile.Name =  $Label.ProfileSystemAdmin,
            $Profile.Name =  $Label.ProfileDataSteward,
            CONTAINS($Label.Bypassed_Sales_Integration_Profiles_Id,$Profile.Id),
            $Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
	    ISCHANGED(Is_Updated_From_Contact_Role__c)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Clinical_Type__c</errorDisplayField>
    <errorMessage>Please provide a &quot;Clinical Type&quot; value (Segmentation Information section).</errorMessage>
</ValidationRule>